--- a/Visualizer/index.html
+++ b/Visualizer/index.html
@@ -12,12 +12,15 @@
   fetch('../datasets/cv.json').then(res => res.json()).then(data => {
     const Graph = ForceGraph()
     (document.getElementById('graph'))
-      .graphData(data)
-      .nodeLabel('id')
-      .nodeAutoColorBy('group')
-      .onNodeDragEnd(node => {
-        node.fx = node.x;
-        node.fy = node.y;
+            .graphData(data)
+            .nodeLabel('id')
+            .nodeAutoColorBy('group')
+            .center(node => node.id === 'Camilo Ortiz' ? 0.5 : 1)
+            .forceManyBody(-100)
+            .forceLink().distance(100)
+            .onNodeDragEnd(node => {
+              node.fx = node.x;
+              node.fy = node.y;
       });
   });
 </script>
